--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,60 @@
-logs
-project/project
-project/target
-target
-tmp
-.history
-dist
-/.idea
-/*.iml
-/out
-/.idea_modules
-/.classpath
-/.project
-/RUNNING_PID
-/.settings
+*~
+\#*#
+*.DS_Store
+*.class
+.com.apple.timemachine.supported
+.import-temp/
+
+/target
+/reports
+
+
+/conf/*
+!/conf/README.txt
+
+##### INTELLIJ
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+
+
+##### NETBEANS
+
+nbproject/private/
+build/
+nbbuild/
+/dist/
+nbdist/
+
+##### ECLIPSE 
+
+
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
+# External tool builders
+.externalToolBuilders/
+ 
+# Locally stored "Eclipse launch configurations"
+*.launch
+ 
+# CDT-specific
+.cproject
+ 
+# PDT-specific
+.buildpath
